[gd_scene load_steps=8 format=3 uid="uid://dvjlkpjvjxn0h"]

[ext_resource type="Script" path="res://scripts/MicRecord.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c5fl4pf7cxwvc" path="res://gizmo.png" id="3_kgjae"]
[ext_resource type="Theme" uid="uid://d18y4voshb0um" path="res://Menu Theme.tres" id="3_lar1l"]
[ext_resource type="Script" path="res://scripts/gizmo.gd" id="4_6j4ar"]
[ext_resource type="Script" path="res://scripts/Menu.gd" id="4_l3c8m"]

[sub_resource type="AudioStreamMicrophone" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbb78"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.262932, 0.262932, 0.262932, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="MicRecord" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("1")
autoplay = true
bus = &"Record"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu" type="Control" parent="." node_paths=PackedStringArray("ObjectsRoot", "MenusRoot", "gizmo")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_l3c8m")
ObjectsRoot = NodePath("../Control/Control")
MenusRoot = NodePath("PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MenusRoot")
gizmo = NodePath("Gizmo")

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 191.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qbb78")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="DeviceDropdown" type="MenuButton" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Input Device"
item_count = 1
popup/item_0/text = ""
popup/item_0/id = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(89.705, 193.37)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="ThesholdSlider" type="VSlider" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5

[node name="VolumeVisual" type="ProgressBar" parent="Menu/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 130.82)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Menu/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23.555)
layout_mode = 2
text = "+"

[node name="PanelContainer" type="PanelContainer" parent="Menu/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenusRoot" type="VBoxContainer" parent="Menu/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="FileButton" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Change Texture"

[node name="Label" type="Label" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lar1l")
text = "Press any key to open this menu again"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="QuitButton" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Quit"

[node name="Gizmo" type="Control" parent="Menu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_6j4ar")

[node name="Button" type="TextureButton" parent="Menu/Gizmo"]
layout_mode = 0
offset_left = -62.5
offset_top = -62.5
offset_right = 62.5
offset_bottom = 62.5
texture_normal = ExtResource("3_kgjae")

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(682, 589)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg, *.bmp, *.dds, *.ktx, *.exr, *.hdr, *.tga, *.svg, *.webp")
use_native_dialog = true

[connection signal="drag_ended" from="Menu/PanelContainer/VBoxContainer/HBoxContainer/ThesholdSlider" to="." method="_on_v_slider_drag_ended"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/Button" to="Menu" method="_create_new_object"]
[connection signal="button_down" from="Menu/PanelContainer/VBoxContainer/FileButton" to="Menu" method="_on_file_button_button_down"]
[connection signal="button_down" from="Menu/PanelContainer/VBoxContainer/CloseButton" to="Menu" method="_on_button_button_down"]
[connection signal="button_down" from="Menu/PanelContainer/VBoxContainer/QuitButton" to="Menu" method="_on_quit_button_button_down"]
[connection signal="button_down" from="Menu/Gizmo/Button" to="Menu/Gizmo" method="drag"]
[connection signal="button_up" from="Menu/Gizmo/Button" to="Menu/Gizmo" method="dragnt"]
[connection signal="file_selected" from="FileDialog" to="Menu" method="_on_file_dialog_file_selected"]
